# church-encodings

./: .gitignore  README.md
haskell/: haskell.cabal
haskell/src/: Church.hs
haskell/src/Church/: Bool.hs  CoProduct.hs  List.hs  Maybe.hs  Numeral.hs  Pair.hs  Product.hs  SKI.hs
